@@ -1,0 +1,13 @@
+// This file may be redistributed and modified only under the terms of
+// the GNU General Public License (See COPYING for details).
+// Copyright (C) 2004 Damien McGinnes, Alistair Riddoch
+
+#include <Mercator/BasePoint.h>
+
+namespace Mercator { 
+
+const float BasePoint::HEIGHT = 8.0;
+const float BasePoint::ROUGHNESS = 1.15;
+const float BasePoint::FALLOFF = 0.15;
+
+} //namespace Mercator
